Fix display on mobile II

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+
+
+body {
+  color: black;
+  margin: 0;
+  white-space: nowrap;
+  padding: 0;
+  min-height: 100vh;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -15,5 +25,6 @@
 body {
   color: black;
   margin: 0;
+  min-height: 100vh;
 }
 
